when aborted with control-C, killed with a signal, or when the
connection is lost.

When removing older than, delete empty increments directories

Long filename bug finally fixed (phew).  rdiff-backup should now
correctly mirror any file that it can read.

Due to very detailed error report from Yoav, fixed a "Directory not
empty" error that can arise on emulated filesystems like NFS and
EncFS.


New in v1.1.2 (2005/11/06)
--------------------------

This version corrects a packaging error in v1.1.1, which was totally
broken.


New in v1.1.1 (2005/11/05)
--------------------------

rdiff-backup now writes SHA1 sums into its mirror_metadata file for
all regular files, and checks them when restoring.

The above greatly increases the size of the mirror_metadata files, so
diff them for space efficiency, as suggested by Dean Gaudet.

Added two new comparison modes: full file (using the --compare-full or
--compare-full-at-time) or by hash (--compare-hash and
--compare-hash-at-time).

Applied Alec Berryman's patch to update the no-compression regexp.

Alec Berryman's fs_abilities patch is supposed to help with AFS.

Fixed filename-too-long crash when quoting.

Patched carbonfile support, re-enabled it by default.


New in v1.1.0 (2005/10/24)
--------------------------

Refactored fs_abilities for more flexibility.  In particular, avoid
quoting if both source and destination file systems are
case-insensitive.

Increased buffer sizes by factor of 4, because everyone probably has 4
times as much RAM now as when I originally picked those values.

When possible, fsync using a writable file descriptor.  This may help
with cygwin.  (Requested/tested by Dave Kempe.)

Support req 104755: Added --preserve-numerical-ids option, which makes
rdiff-backup preserve uids/gids instead of unames/gnames.  (Suggested
by Wiebe Cazemier)

Fix for bug #14799 reported by Bob McKay:  Crash when backing up files
with high permissions (like suid) to some FAT systems.


New in v1.0.2 (2005/10/24)